Fix most Java 9+ deprecation warnings in bio-formats-plugins component